finishing the project (responsive)
